--- a/package.json
+++ b/package.json
@@ -18,28 +18,32 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.2",
+    "@heroicons/vue": "^1.0.3",
     "axios": "^0.21.1",
-    "vue": "^3.0.5",
+    "highlight.js": "^11.1.0",
+    "marked": "^2.1.3",
+    "vditor": "^3.8.6",
+    "vue": "^3.1.5",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "@vitejs/plugin-vue": "^1.2.4",
-    "@vue/compiler-sfc": "^3.1.4",
-    "autoprefixer": "^10.3.0",
-    "eslint": "^7.30.0",
+    "@tailwindcss/typography": "^0.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/compiler-sfc": "^3.1.5",
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.13.0",
-    "postcss": "^8.3.5",
+    "eslint-plugin-vue": "^7.14.0",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.4",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.3.5",
-    "vite": "^2.4.1",
-    "vue-tsc": "^0.2.0"
+    "vite": "^2.4.4",
+    "vue-tsc": "^0.2.2"
   }
 }
