--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "resolveJsonModule": true,
     "lib": ["esnext", "dom"],
-    "types": ["vite/client", "node"]
+    "types": ["vite/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
