--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.3",
     "axios": "^0.21.1",
+    "echarts": "^5.1.2",
     "highlight.js": "^11.1.0",
     "marked": "^2.1.3",
     "vditor": "^3.8.6",
