--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --fix --ext .ts,.js,.vue src"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.4",
