--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "lint": "eslint --fix ./src --ext .vue,.js,.ts",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,7 +19,9 @@
     "autoprefixer": "^10.4.4",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.1",
