--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@gradin/tailwindcss-scrollbar": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-vue": "^2.2.0",
