--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
