--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
+    "echarts": "^5.3.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
