--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "echarts": "^5.3.2",
+    "element-plus": "^2.1.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -34,6 +35,8 @@
     "prettier": "^2.6.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.8.0",
     "vue-tsc": "^0.29.8"
   },
