--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
+    "@vue/runtime-core": "^3.2.33",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
     "vue": "^3.2.25",
