--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.0",
     "@heroicons/vue": "^1.0.6",
     "@vue/runtime-core": "^3.2.33",
     "echarts": "^5.3.2",
