--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/runtime-core": "^3.2.33",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
+    "vditor": "^3.8.13",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
