--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.6.0",
     "@heroicons/vue": "^1.0.6",
     "@vue/runtime-core": "^3.2.33",
+    "axios": "^0.27.2",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
     "vditor": "^3.8.13",
