--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.14.0",
+    "@bytemd/plugin-footnotes": "^1.12.4",
+    "@bytemd/plugin-frontmatter": "^1.14.0",
+    "@bytemd/plugin-gemoji": "^1.14.0",
+    "@bytemd/plugin-gfm": "^1.14.0",
+    "@bytemd/plugin-highlight": "^1.14.0",
+    "@bytemd/plugin-medium-zoom": "^1.14.0",
+    "@bytemd/plugin-mermaid": "^1.14.0",
+    "@bytemd/vue-next": "^1.14.0",
     "@headlessui/vue": "^1.6.0",
     "@heroicons/vue": "^1.0.6",
     "@vue/runtime-core": "^3.2.33",
     "axios": "^0.27.2",
+    "bytemd": "^1.14.0",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
-    "vditor": "^3.8.13",
+    "juejin-markdown-themes": "^1.29.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
