--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@gradin/tailwindcss-scrollbar": "^2.0.2",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
