--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "paths": {
       "@": ["src"],
       "@/*": ["src/*"]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
