--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/runtime-core": "^3.2.33",
     "axios": "^0.27.2",
     "bytemd": "^1.15.0",
+    "dayjs": "^1.11.4",
     "echarts": "^5.3.2",
     "element-plus": "^2.2.6",
     "juejin-markdown-themes": "^1.29.2",
